--- a/SwedishCoordinates.Tests/SwedishCoordinates.Tests.csproj
+++ b/SwedishCoordinates.Tests/SwedishCoordinates.Tests.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CoordinateSystemTypeCalculatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SphericalMercatorCalculatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
