--- a/SwedishCoordinates.Tests/SwedishCoordinates.Tests.csproj
+++ b/SwedishCoordinates.Tests/SwedishCoordinates.Tests.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoordinateSystemTypeCalculatorTests.cs" />
+    <Compile Include="PositionConverterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SphericalMercatorCalculatorTests.cs" />
   </ItemGroup>
