--- a/SwedishCoordinates/SwedishCoordinates.csproj
+++ b/SwedishCoordinates/SwedishCoordinates.csproj
@@ -39,9 +39,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\GaussKreuger.cs" />
+    <Compile Include="Classes\Position.cs" />
     <Compile Include="CoordinateConst.cs" />
     <Compile Include="CoordinateSystemTypeCalculator.cs" />
     <Compile Include="CoordinateSystemType.cs" />
+    <Compile Include="PositionConverter.cs" />
+    <Compile Include="Positions\RT90Position.cs" />
+    <Compile Include="Positions\SWEREF99Position.cs" />
+    <Compile Include="Positions\WebMercatorPosition.cs" />
+    <Compile Include="Positions\WGS84Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SphericalMercatorCalculator.cs" />
   </ItemGroup>
