--- a/SwedishCoordinates/SwedishCoordinates.csproj
+++ b/SwedishCoordinates/SwedishCoordinates.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Positions\WebMercatorPosition.cs" />
     <Compile Include="Positions\WGS84Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SphericalMercatorCalculator.cs" />
+    <Compile Include="WebMercatorCalculator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
