--- a/SwedishCoordinates/SwedishCoordinates.nuspec
+++ b/SwedishCoordinates/SwedishCoordinates.nuspec
@@ -4,8 +4,8 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <authors>unger</authors>
+    <owners>unger</owners>
     <licenseUrl>https://github.com/unger/SwedishCoordinates</licenseUrl>
     <projectUrl>https://github.com/unger/SwedishCoordinates</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
